# typed-D3DShot

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  mypy.ini  pyproject.toml  pyrightconfig.json  ruff.toml  setup.py
.github/: FUNDING.yml
.github/workflows/: checks.yml  publish.yml
d3dshot/: __init__.py  capture_output.py  d3dshot.py  display.py
d3dshot/capture_outputs/: numpy_capture_output.py  numpy_float_capture_output.py  pil_capture_output.py  pytorch_capture_output.py  pytorch_float_capture_output.py  pytorch_float_gpu_capture_output.py  pytorch_gpu_capture_output.py
d3dshot/dll/: d3d.py  dxgi.py  shcore.py  user32.py
tests/: test_dll.py  test_import_all_modules.py
typings/comtypes/: GUID.pyi  __init__.pyi  _comobject.pyi  _memberspec.pyi  _meta.pyi  _npsupport.pyi  _safearray.pyi  automation.pyi  clear_cache.pyi  connectionpoints.pyi  errorinfo.pyi  git.pyi  hresult.pyi  logutil.pyi  messageloop.pyi  patcher.pyi  persist.pyi  safearray.pyi  shelllink.pyi  typeinfo.pyi  util.pyi  viewobject.pyi
typings/comtypes/client/: __init__.pyi  _code_cache.pyi  _constants.pyi  _events.pyi  _generate.pyi  dynamic.pyi  lazybind.pyi
typings/comtypes/server/: __init__.pyi  automation.pyi  connectionpoints.pyi  inprocserver.pyi  localserver.pyi  register.pyi  w_getopt.pyi
typings/comtypes/tools/: tlbparser.pyi  typedesc.pyi  typedesc_base.pyi
typings/comtypes/tools/codegenerator/: __init__.pyi  codegenerator.pyi  helpers.pyi  modulenamer.pyi  namespaces.pyi  packing.pyi  typeannotator.pyi
